--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "super-procrastinator",
+  "homepage": "https://MSkrzypietz.github.io/super-procrastinator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-login-component": "^0.9.3",
     "react-scripts": "1.1.1",
     "reactstrap": "^5.0.0-beta"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
