--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.2.0",
     "react-google-login-component": "^0.9.3",
     "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0-beta"
+    "reactstrap": "^5.0.0-beta",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
