--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gh-pages": "^1.1.0",
     "prop-types": "^15.6.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.1.6"
