--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-procrastinator",
+  "identifier": "super-procrastinator",
   "homepage": "https://MSkrzypietz.github.io/super-procrastinator",
   "version": "0.1.0",
   "private": true,
