--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "ajv": "^6.2.0",
     "bootstrap": "^4.0.0",
+    "firebase": "^4.11.0",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-firebaseui": "^1.1.9",
     "react-scripts": "1.1.1",
     "reactstrap": "^5.0.0-beta"
   },
