Changed the homepage destination in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "super-procrastinator",
-  "homepage": "https://MSkrzypietz.github.io/super-procrastinator",
+  "homepage": "https://mortenterhart.github.io/super-procrastinator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
